<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Slowmotion</string>

    <string name="action_settings">Settings</string>
    <string name="edit_message">Connect to Server first&#8230;</string>
    <string name="input_hostname">Remote hostname</string>
    <string name="button_send">Send</string>
    <string name="button_pi_to_connect">Connect</string>
    <string name="button_pi_to_disconnect">Disconnect</string>

    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_drawer">Fuction Selection</string>

    <string name="title_activity_debug_default">Slowmotion Robot Controller</string>
    <string name="title_activity_debug_music">Music Play (Debug)</string>
    <string name="title_fragment_welcome_default">Welcome</string>

    <!-- about drawer -->
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- 12 buttons to play the music -->
    <string name="tag_button_1" translatable="false">1</string>
    <string name="tag_button_2" translatable="false">2</string>
    <string name="tag_button_3" translatable="false">3</string>
    <string name="tag_button_4" translatable="false">4</string>
    <string name="tag_button_5" translatable="false">5</string>
    <string name="tag_button_6" translatable="false">6</string>
    <string name="tag_button_7" translatable="false">7</string>
    <string name="tag_button_8" translatable="false">8</string>
    <string name="tag_button_9" translatable="false">9</string>
    <string name="tag_button_10" translatable="false">0</string>
    <string name="tag_button_11" translatable="false">-</string>
    <string name="tag_button_12" translatable="false">=</string>

    <string name="text_button_1" translatable="false">1</string>
    <string name="text_button_2" translatable="false">2</string>
    <string name="text_button_3" translatable="false">3</string>
    <string name="text_button_4" translatable="false">4</string>
    <string name="text_button_5" translatable="false">5</string>
    <string name="text_button_6" translatable="false">6</string>
    <string name="text_button_7" translatable="false">7</string>
    <string name="text_button_8" translatable="false">1^</string>
    <string name="text_button_9" translatable="false">2^</string>
    <string name="text_button_10" translatable="false">3^</string>
    <string name="text_button_11" translatable="false">4^</string>
    <string name="text_button_12" translatable="false">5^</string>

    <!-- MainActivity -->
    <string name="menu_main_settings_string">Settings</string>
    <string name="menu_main_reset_pref_string">Reset Preferences</string>
    <string name="menu_main_about_string">About</string>

    <!-- About info -->
    <string name="str_confirm">Confirm</string>
    <string name="dialog_about_info">Slowmotion Robot Controller\n\nFor USTC Robogame 2015</string>
    <string name="str_not_implemented">Not implemented</string>
    <string name="str_robot_disconnect">Disconnect</string>
    <string name="str_robot_reconnect">Reconnect</string>
    <string name="str_conn_established">Robot Connected</string>
    <string name="str_conn_reconnected">Robot Reonnected</string>
    <string name="str_conn_disconnected">Robot Disonnected</string>
    <string name="str_error_when_connecting">Error occurred when connecting.\nPlease try again.</string>
    <string name="str_error_when_disconnecting">Error occurred when disconnecting.\nPlease check the log.</string>
    <string name="str_error_when_reconnecting">Error occurred when reconnecting.\nPlease check the log.</string>
    <string name="str_return_to_welcome">No Connection.</string>
    <string name="str_begin_note_record">Begin Note Recording</string>
    <string name="str_stop_note_record">Stop Note Recording</string>
    <string name="str_play_note_record">Play Recorded Note</string>
    <string name="str_volume_up">Volume Up</string>
    <string name="str_volume_down">Volume Down</string>
    <string name="str_play_note_music_together">Play Note/Music Together</string>
    <string name="str_reboot">Reboot Robot</string>
    <string name="str_poweroff">Poweroff Robot</string>

    <!-- PREFERENCES -->
    <string name="pref_network_default_robot_addr" translatable="false">114.214.195.97</string>
    <string name="pref_network_default_robot_port" translatable="false">9999</string>

    <string name="pref_title_network">Network</string>
    <string name="pref_title_remote_addr">Robot Remote Address</string>
    <string name="pref_title_remote_port">Robot Remote Port</string>
    <string name="pref_title_misc">Misc</string>
    <string name="pref_title_debug">Enable Debug Mode</string>
    <string name="pref_title_checkbox_music_loop">Enable Music Loop</string>

    <string name="key_pref_category_network" translatable="false">key_pref_category_network</string>
    <string name="key_pref_remote_addr" translatable="false">key_pref_remote_addr</string>
    <string name="key_pref_remote_port" translatable="false">key_pref_remote_port</string>
    <string name="key_pref_category_misc" translatable="false">key_pref_category_misc</string>
    <string name="key_pref_debug" translatable="false">key_pref_category_debug</string>
    <string name="key_pref_music_loop" translatable="false">key_pref_music_loop</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_music">MusicActivity</string>
    <!-- EOF PREFERENCES -->

    <!-- DRAWER LIST -->
    <!-- See Also arrays.xml -->
    <string name="id_debug_drawer_list" translatable="false">2</string>
    <string name="id_music_drawer_list" translateable="false" translatable="false">1</string>
    <string name="id_note_drawer_list" translateable="false" translatable="false">0</string>
    <!-- EOF DRAWER LIST -->

    <!-- ========  Drawer Strings ============ -->
    <string name="drawer_play_note">Play Notes</string>
    <string name="drawer_play_note_explanation">Hit notes instantly</string>
    <string name="drawer_play_music">Play Music</string>
    <string name="drawer_play_music_explanation">Play music through speaker</string>
    <string name="drawer_debug">@string/title_activity_debug_default</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- &&&&&&&&&&  Play Musics &&&&&&&&&&&&&&  -->
    <string name="str_music_play">Play</string>
    <string name="str_music_stop">Stop</string>

    <!-- iflytek apps -->
    <string name="str_iflytek_cloud_appid" translatable="false">55fe2140</string>
    <string name="str_iflytek_testing">Voice Recognize Testing</string>
    <string name="str_drawer_autoplay">Play Given Note Songs</string>
    <string name="title_spinner_music">Select Background Music</string>
    <string name="title_spinner_autoplay">Select Autoplay Song</string>

</resources>
