<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_title_network"
        android:key="@string/key_pref_category_network">
        <EditTextPreference
            android:title="@string/pref_title_remote_addr"
            android:defaultValue="@string/pref_network_default_robot_addr"
            android:key="@string/key_pref_remote_addr" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_misc"
        android:key="@string/key_pref_category_misc">
        <CheckBoxPreference
            android:title="@string/pref_title_debug"
            android:defaultValue="false"
            android:key="@string/key_pref_debug" />
    </PreferenceCategory>

</PreferenceScreen>