<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main Content View -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/main_activity_toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/edit_message"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_message" />
            <Button
                android:id="@+id/button_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="triggerPiConnect"
                android:text="@string/button_pi_to_connect"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/button_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/tag_button_1"
                    android:text="@string/text_button_1"/>
                <Button
                    android:id="@+id/button_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/tag_button_2"
                    android:text="@string/text_button_2"/>
                <Button
                    android:id="@+id/button_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/tag_button_3"
                    android:text="@string/text_button_3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/button_04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/tag_button_4"
                    android:text="@string/text_button_4"/>
                <Button
                    android:id="@+id/button_05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/tag_button_5"
                    android:text="@string/text_button_5"/>
                <Button
                    android:id="@+id/button_06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/tag_button_6"
                    android:text="@string/text_button_6"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/button_07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/tag_button_7"
                    android:text="@string/text_button_7"/>
                <Button
                    android:id="@+id/button_08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/tag_button_8"
                    android:text="@string/text_button_8"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            >
            <EditText android:id="@+id/input_hostname"
                android:clickable="false"
                android:inputType="none"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/input_hostname"
                android:text=""/>

        </LinearLayout>

        <Button
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:text="Explorer"
            android:id="@+id/button" />

        <TextView android:id="@+id/text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

    </LinearLayout>

    <!-- The Navigation Drawer -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="1dp"
        android:background="@android:color/white"/>
    </android.support.v4.widget.DrawerLayout>





