<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/debug_action_settings"
        android:title="@string/menu_main_settings_string"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/debug_action_reconnect"
        android:title="@string/str_robot_reconnect"
        android:orderInCategory="101"
        app:showAsAction="never" />
    <item
        android:id="@+id/debug_action_reset_pref"
        android:title="@string/menu_main_reset_pref_string"
        android:orderInCategory="102"
        app:showAsAction="never" />
    <item
        android:id="@+id/debug_action_about"
        android:title="@string/menu_main_about_string"
        android:orderInCategory="103"
        app:showAsAction="never"/>
</menu>